--- a/css/portfolio-7760df.webflow.css
+++ b/css/portfolio-7760df.webflow.css
@@ -1,12 +1,14 @@
 .body {
+  padding-right: 5vw;
+  padding-left: 5vw;
   background-color: #000;
 }
 
 .section {
-  position: static;
+  position: relative;
   width: 100vw;
   height: 100vh;
-  margin-top: -30%;
+  margin-top: 0%;
   margin-bottom: 60px;
   padding-top: 0vh;
   padding-right: 5vw;
@@ -42,7 +44,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  z-index: 90;
+  z-index: 99;
   min-height: 85px;
   min-width: 40px;
   background-color: #000;
@@ -77,15 +79,14 @@
 }
 
 .div-block-3 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 10px;
+  position: relative;
+  top: 0px;
   z-index: 100;
-  width: 35%;
+  width: 45%;
   height: auto;
-  margin-top: 30vh;
-  margin-right: 5vw;
-  margin-left: 5vw;
+  margin-top: 25vh;
+  margin-right: auto;
+  margin-left: 0px;
   border-style: solid;
   border-width: 1px;
   border-color: rgba(117, 16, 16, 0);
@@ -128,11 +129,11 @@
 }
 
 .image {
-  position: relative;
-  left: 37%;
-  top: 30%;
+  position: absolute;
+  left: 30vw;
+  top: 25vh;
   z-index: -1;
-  max-width: 80%;
+  max-width: 90%;
 }
 
 .image-2 {
@@ -142,19 +143,27 @@
 }
 
 .paragraph {
-  position: absolute;
+  position: static;
   left: 6%;
   top: 35%;
   margin-top: 0%;
-  margin-bottom: 0%;
+  margin-bottom: 5%;
+  padding-left: 8px;
   font-family: 'Avenir 200', sans-serif;
-  color: rgba(255, 255, 255, 0.5);
+  color: #d4d4d4;
   font-size: 18px;
 }
 
 .image-3 {
-  position: static;
-  max-width: 125%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10px;
+  z-index: 100;
+  display: inline-block;
+  overflow: auto;
+  max-width: 40%;
+  margin-top: -130vh;
+  margin-left: 5vw;
 }
 
 .div-block-4 {
@@ -171,7 +180,7 @@
   top: 25%;
   right: auto;
   bottom: auto;
-  width: 50%;
+  width: 40%;
   height: auto;
   margin-top: 0%;
   margin-bottom: 0px;
@@ -183,7 +192,7 @@
 }
 
 .paragraph-2.button {
-  position: absolute;
+  position: static;
   left: 50%;
   top: auto;
   right: auto;
@@ -192,17 +201,16 @@
   overflow: scroll;
   width: auto;
   height: auto;
-  margin-top: 3%;
-  margin-right: 12px;
-  margin-left: auto;
+  margin: 40px 10px auto auto;
   padding-left: 15px;
   float: left;
   clear: none;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #f3b76c;
   background-image: linear-gradient(127deg, #da6989, #f5b468);
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
+  line-height: 20px;
   -o-object-fit: fill;
   object-fit: fill;
 }
@@ -231,7 +239,7 @@
 }
 
 .columns {
-  position: absolute;
+  position: static;
   left: 5%;
   top: 52%;
   right: 0%;
@@ -289,13 +297,13 @@
 }
 
 .image-7 {
-  position: absolute;
+  position: static;
   left: 5%;
   top: 0%;
   right: auto;
   bottom: auto;
   width: auto;
-  max-width: 50vh;
+  max-width: none;
 }
 
 .image-8 {
@@ -335,7 +343,7 @@
 }
 
 .button.quar {
-  margin-left: 45vw;
+  margin-left: auto;
   background-image: linear-gradient(142deg, #a081ff, #943f6a);
 }
 
@@ -360,7 +368,7 @@
 
 .heading-4 {
   display: block;
-  width: 45%;
+  width: auto;
   float: none;
   clear: none;
   font-family: 'Avenir 600', sans-serif;
@@ -381,7 +389,7 @@
 
 .paragraph-3 {
   display: block;
-  width: 52%;
+  width: auto;
   margin-top: 20px;
   margin-bottom: 20px;
   font-family: 'Avenir 200', sans-serif;
@@ -431,8 +439,8 @@
 }
 
 .image-13 {
-  position: absolute;
-  left: 60px;
+  position: static;
+  left: 0px;
   top: 0px;
   max-width: 40vw;
 }
@@ -515,6 +523,19 @@
   background-color: #000;
 }
 
+.bold-text-3 {
+  margin-top: 45px;
+  font-family: 'Avenir 400', sans-serif;
+  color: #fff;
+  font-size: 20px;
+}
+
+.bold-text-3.case-bold {
+  font-family: 'Avenir 400', sans-serif;
+  font-size: 36px;
+  line-height: 24px;
+}
+
 .image-16 {
   position: absolute;
   left: 115.812px;
@@ -523,7 +544,7 @@
 }
 
 .body-2 {
-  background-color: #000;
+  background-color: #f1f1f1;
 }
 
 .navbar-2 {
@@ -570,8 +591,13 @@
   position: relative;
   height: 90vh;
   padding-top: 10vh;
-  padding-right: 5vw;
-  padding-left: 5vw;
+  padding-right: 10vw;
+  padding-left: 10vw;
+  background-color: #000;
+}
+
+.section-4.quar {
+  background-color: #e6f0f3;
 }
 
 .text-block {
@@ -579,6 +605,7 @@
 }
 
 .text-block.heading-5 {
+  margin-left: 0vw;
   color: #c687d3;
   font-size: 24px;
 }
@@ -622,6 +649,11 @@
   margin-top: 8px;
 }
 
+.section-5 {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000));
+  background-image: linear-gradient(180deg, #000, #000);
+}
+
 .section-6 {
   background-color: #b13030;
   color: #bb6363;
@@ -643,8 +675,15 @@
   margin-top: 20px;
   margin-bottom: 0px;
   font-family: 'Avenir 200', sans-serif;
-  color: #8b8b8b;
+  color: hsla(0, 0%, 100%, 0.75);
+  font-size: 16px;
+  line-height: 24px;
   text-transform: capitalize;
+}
+
+.text-block-2.quar {
+  font-family: 'Avenir 400', sans-serif;
+  color: #666;
 }
 
 .image-19 {
@@ -658,7 +697,8 @@
 
 .heading-8 {
   font-family: 'Avenir 200', sans-serif;
-  color: #94b480;
+  color: #708b62;
+  line-height: 48px;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
@@ -666,23 +706,26 @@
 .section-7 {
   margin-top: 0vw;
   padding-top: 10vh;
-  padding-right: 5vw;
-  padding-left: 5vw;
+  padding-right: 15vw;
+  padding-left: 15vw;
 }
 
 .paragraph-5 {
   margin-top: 40px;
   margin-bottom: 60px;
-  padding-right: 120px;
-  padding-left: 120px;
+  padding-right: 0px;
+  padding-left: 0px;
   font-family: 'Avenir 200', sans-serif;
-  color: #94b480;
+  color: #597e42;
   font-size: 26px;
   line-height: 30px;
+  font-weight: 200;
+  text-align: left;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 .image-20 {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 
@@ -693,26 +736,26 @@
   margin-top: 20px;
   margin-right: 32px;
   border-radius: 10px;
-  background-color: rgba(152, 173, 138, 0.55);
+  background-color: #203b14;
   box-shadow: 3px 3px 5px 1px rgba(44, 44, 44, 0.72);
   font-family: 'Avenir 200', sans-serif;
-  color: hsla(0, 0%, 100%, 0.78);
+  color: #e2e2e2;
 }
 
 .button-3.top {
   position: absolute;
-  left: 5%;
+  left: auto;
   top: auto;
   right: auto;
   bottom: 7.5%;
 }
 
 .paragraph-6 {
-  width: 80%;
+  width: auto;
   margin-right: auto;
   margin-left: auto;
   font-family: 'Avenir 200', sans-serif;
-  color: #c9c9c9;
+  color: #555;
   font-size: 16px;
 }
 
@@ -741,7 +784,7 @@
 }
 
 .div-block-5 {
-  position: relative;
+  position: static;
   left: -5vw;
   top: auto;
   right: auto;
@@ -751,7 +794,7 @@
   margin-bottom: 5%;
   padding-top: 40px;
   padding-bottom: 40px;
-  padding-left: 100px;
+  padding-left: 15vw;
   background-image: linear-gradient(69deg, #284e17, #9bb08e);
 }
 
@@ -799,26 +842,27 @@
 
 .image-22 {
   display: block;
-  width: 75%;
-  max-width: none;
+  width: auto;
+  max-width: 100%;
   margin: 10px auto 60px;
+  box-shadow: 1px 1px 3px 0 #000;
 }
 
 .image-23 {
   display: block;
-  width: 75%;
-  max-width: 65%;
-  margin: 40px auto 60px;
+  width: auto;
+  max-width: 100%;
+  margin: 7% auto;
 }
 
 .foodhead {
-  width: 80%;
+  width: auto;
   margin-right: auto;
   margin-bottom: 10px;
   margin-left: auto;
   font-family: 'Avenir 200', sans-serif;
-  color: #98ad8a;
-  font-size: 20px;
+  color: #325622;
+  font-size: 22px;
 }
 
 .foodhead._75 {
@@ -828,7 +872,10 @@
 }
 
 .foodhead.left {
-  margin-left: 0px;
+  display: block;
+  width: auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .div-block-6 {
@@ -845,7 +892,7 @@
 .image-24 {
   padding-right: 15px;
   padding-left: 15px;
-  border-radius: 35px;
+  border-radius: 15px;
 }
 
 .columns-5 {
@@ -856,7 +903,7 @@
   display: block;
   width: 75%;
   margin-right: auto;
-  margin-bottom: 60px;
+  margin-bottom: 0px;
   margin-left: auto;
 }
 
@@ -885,15 +932,17 @@
 }
 
 .image-27 {
-  width: 45%;
+  width: 60%;
+  margin-left: -3px;
 }
 
 .image-28 {
   position: absolute;
   left: 0%;
-  top: auto;
+  top: 0%;
   right: 0%;
-  bottom: 0%;
+  bottom: auto;
+  display: block;
 }
 
 .quarsec {
@@ -905,7 +954,7 @@
 
 .text-block-4 {
   width: 80%;
-  margin: 0px auto 40px;
+  margin: 0px auto 20px;
   font-family: 'Avenir 400', sans-serif;
   color: #555;
   font-size: 24px;
@@ -913,7 +962,7 @@
 }
 
 .quardiv {
-  width: 60%;
+  width: 80%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -925,16 +974,22 @@
 .bolddiv {
   position: relative;
   width: 100vw;
+  height: 80vh;
+  background-image: url('../images/imagasdase-23.png');
+  background-position: 50% 50%;
+  background-size: cover;
 }
 
 .image-30 {
   position: absolute;
   left: 0%;
-  top: 22%;
+  top: 20vh;
   right: 0%;
   bottom: auto;
   display: block;
-  width: 45%;
+  width: auto;
+  height: 40vh;
+  max-width: none;
   margin-right: auto;
   margin-left: auto;
   border-radius: 15px;
@@ -944,11 +999,13 @@
 .image-31 {
   position: absolute;
   left: 0%;
-  top: auto;
+  top: 5vh;
   right: 0%;
   bottom: 5%;
   display: inline;
-  width: 60%;
+  width: auto;
+  height: 70vh;
+  max-width: none;
   margin-right: auto;
   margin-left: auto;
 }
@@ -966,17 +1023,25 @@
   width: 80%;
   margin: 10px auto 60px;
   font-family: 'Avenir 200', sans-serif;
-  color: #ee9786;
+  color: #555;
+  text-shadow: 1px 1px 4px rgba(63, 63, 63, 0.26);
 }
 
 .image-34 {
+  position: relative;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: -1;
+  display: block;
   width: 100vw;
   max-width: none;
-  margin-top: -30%;
+  margin-top: -20%;
 }
 
 .image-35 {
-  height: 90vh;
+  height: 10px;
   max-width: none;
   -o-object-fit: contain;
   object-fit: contain;
@@ -1218,7 +1283,7 @@
 
 .container-7 {
   position: relative;
-  max-width: 95vw;
+  max-width: 80%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1238,6 +1303,255 @@
   color: #555;
 }
 
+.container-9 {
+  position: static;
+  height: 100vh;
+}
+
+.column-3 {
+  display: inline-block;
+}
+
+.iconsub {
+  margin-top: 0px;
+  border-radius: 5px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.88)), to(hsla(0, 0%, 100%, 0.88)));
+  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.88), hsla(0, 0%, 100%, 0.88));
+  font-family: 'Avenir 400', sans-serif;
+  color: #222;
+  font-size: 12px;
+  text-align: center;
+}
+
+.image-42 {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.aboutsec {
+  position: static;
+}
+
+.container-10 {
+  margin-top: 15%;
+  margin-bottom: 15%;
+}
+
+.image-43 {
+  position: absolute;
+  left: 173px;
+  bottom: 199px;
+  z-index: -3;
+  max-height: 130%;
+  max-width: 130%;
+}
+
+.column-4 {
+  display: block;
+  padding-left: 20px;
+}
+
+.column-5 {
+  position: static;
+}
+
+.image-44 {
+  max-height: 4vh;
+  max-width: none;
+  margin-left: 15px;
+}
+
+.image-45 {
+  max-height: 10vh;
+  max-width: none;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.image-46 {
+  max-height: 10vh;
+  max-width: none;
+  margin-right: 10px;
+  margin-left: 15px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.div-block-9 {
+  margin-bottom: 20px;
+}
+
+.text-block-5 {
+  display: inline-block;
+  width: 11vw;
+  margin-top: 15px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 0px;
+  border-radius: 5px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.91)), to(hsla(0, 0%, 100%, 0.91)));
+  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.91), hsla(0, 0%, 100%, 0.91));
+  font-family: 'Avenir 600', sans-serif;
+  color: #000;
+  font-size: 20px;
+  text-align: center;
+}
+
+.image-49 {
+  display: block;
+}
+
+.column-6 {
+  padding-left: 0px;
+}
+
+.body-3 {
+  background-color: #000;
+}
+
+.columns-11 {
+  margin-right: auto;
+  margin-bottom: 10%;
+  margin-left: auto;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.column-7 {
+  padding-right: 0px;
+}
+
+.container-11 {
+  max-width: 70%;
+  padding-top: 5%;
+}
+
+.html-embed {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  max-width: 75%;
+  margin: 20px auto 60px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  box-shadow: 1px 1px 13px 0 #000;
+}
+
+.html-embed-2 {
+  display: inline-block;
+  width: 100%;
+}
+
+.democontainer {
+  max-width: 70%;
+}
+
+.image-50 {
+  max-width: 70%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.paragraph-7 {
+  width: 70%;
+  font-family: 'Avenir 200', sans-serif;
+  color: #f7f7f7;
+  font-size: 16px;
+}
+
+.image-51 {
+  max-height: 8vh;
+  margin-left: 15px;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.column-8 {
+  padding-left: 20px;
+}
+
+.text-block-6 {
+  width: 80%;
+  margin-right: auto;
+  margin-bottom: 60px;
+  margin-left: auto;
+  font-family: 'Avenir 200', sans-serif;
+  font-size: 16px;
+}
+
+.image-52 {
+  display: block;
+  width: 80%;
+  margin-right: auto;
+  margin-bottom: 20px;
+  margin-left: auto;
+  border-radius: 10px;
+}
+
+.dropdown-toggle {
+  position: static;
+  width: 60vw;
+  padding: 10px 20px 10px 0px;
+  border-radius: 10px;
+  background-color: rgba(205, 176, 189, 0.83);
+}
+
+.icon-3 {
+  margin-left: 20px;
+  color: #fff;
+  font-size: 48px;
+  text-shadow: 1px 1px 6px rgba(95, 99, 100, 0.78);
+}
+
+.image-53 {
+  max-width: 90%;
+}
+
+.dropdown {
+  display: block;
+  width: auto;
+  margin-top: 5%;
+}
+
+.heading-9 {
+  margin-top: 10px;
+  margin-right: 40px;
+  padding-left: 20px;
+  font-family: Montserrat, sans-serif;
+  color: #fff;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.44);
+}
+
+.text-block-7 {
+  padding-left: 20px;
+  font-family: 'Avenir 200', sans-serif;
+  color: #fff;
+}
+
 @media screen and (max-width: 991px) {
   .section {
     margin-top: -45%;
@@ -1248,13 +1562,17 @@
   }
 
   .image {
-    position: relative;
-    left: 249px;
-    top: 95px;
+    position: absolute;
+    left: 25vw;
+    top: 20vw;
   }
 
   .paragraph {
     margin-top: -8%;
+  }
+
+  .image-3 {
+    margin-left: auto;
   }
 
   .paragraph-2 {
@@ -1342,6 +1660,10 @@
   .image-18 {
     top: 233px;
   }
+
+  .image-49 {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1368,6 +1690,20 @@
   .image-18 {
     top: 364px;
   }
+
+  .container-9 {
+    height: 70vh;
+  }
+
+  .image-47 {
+    display: none;
+  }
+
+  .image-48 {
+    display: none;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1384,6 +1720,8 @@
 
   .div-block-3 {
     top: 164px;
+    width: auto;
+    margin-top: 0vh;
   }
 
   .section-2 {
@@ -1394,7 +1732,8 @@
   }
 
   .image {
-    position: static;
+    position: absolute;
+    left: 0vw;
     display: block;
     max-width: 90%;
     margin-right: auto;
@@ -1403,10 +1742,12 @@
 
   .paragraph {
     top: 13%;
+    margin-top: auto;
   }
 
   .image-3 {
-    margin-top: -296px;
+    max-width: 80%;
+    margin-top: -80vh;
   }
 
   .paragraph-2 {
@@ -1546,6 +1887,56 @@
 
   .image-18 {
     top: 468px;
+  }
+
+  .image-30 {
+    width: 100vw;
+    height: auto;
+  }
+
+  .column-4 {
+    margin-top: 10vh;
+  }
+
+  .image-44 {
+    max-height: 2vh;
+  }
+
+  .image-45 {
+    max-height: 5vh;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  .image-46 {
+    max-height: 5vh;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  .text-block-5 {
+    width: auto;
+  }
+
+  .columns-10 {
+    width: auto;
+    margin-top: 0vh;
+  }
+
+  .image-47 {
+    display: none;
+  }
+
+  .image-48 {
+    display: none;
+  }
+
+  .image-49 {
+    display: none;
+  }
+
+  .image-51 {
+    max-height: 4vh;
   }
 }
 
