--- a/css/portfolio-7760df.webflow.css
+++ b/css/portfolio-7760df.webflow.css
@@ -86,7 +86,7 @@
   height: auto;
   margin-top: 25vh;
   margin-right: auto;
-  margin-left: 0px;
+  margin-left: 0vw;
   border-style: solid;
   border-width: 1px;
   border-color: rgba(117, 16, 16, 0);
@@ -130,8 +130,8 @@
 
 .image {
   position: absolute;
-  left: 30vw;
-  top: 25vh;
+  left: 35vw;
+  top: 22vh;
   z-index: -1;
   max-width: 90%;
 }
@@ -157,13 +157,16 @@
 .image-3 {
   position: -webkit-sticky;
   position: sticky;
-  top: 10px;
+  top: 20px;
   z-index: 100;
   display: inline-block;
-  overflow: auto;
-  max-width: 40%;
-  margin-top: -135vh;
+  overflow: visible;
+  max-height: 8vh;
+  max-width: none;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-left: auto;
+  padding-left: 0%;
 }
 
 .div-block-4 {
@@ -442,7 +445,7 @@
   position: static;
   left: 0px;
   top: 0px;
-  max-width: 40vw;
+  max-width: 100%;
 }
 
 .column-2 {
@@ -1332,7 +1335,7 @@
 }
 
 .landingspace {
-  height: 5vh;
+  height: auto;
 }
 
 .aboutsec {
@@ -1390,7 +1393,7 @@
 
 .text-block-5 {
   display: inline-block;
-  width: 11vw;
+  width: 8vw;
   margin-top: 15px;
   margin-right: 20px;
   margin-bottom: 10px;
@@ -1554,6 +1557,10 @@
   padding-left: 20px;
   font-family: 'Avenir 200', sans-serif;
   color: #fff;
+}
+
+.columns-12 {
+  margin-left: auto;
 }
 
 @media screen and (max-width: 991px) {
