--- a/css/portfolio-7760df.webflow.css
+++ b/css/portfolio-7760df.webflow.css
@@ -542,9 +542,12 @@
 
 .bold-text-3 {
   margin-top: 45px;
-  font-family: 'Avenir 400', sans-serif;
+  padding-right: 10px;
+  font-family: 'Avenir 200', sans-serif;
   color: #fff;
   font-size: 20px;
+  line-height: 22px;
+  font-weight: 200;
 }
 
 .bold-text-3.case-bold {
@@ -632,6 +635,10 @@
   font-family: 'Avenir 200', sans-serif;
   color: #7d98d8;
   font-size: 24px;
+}
+
+.text-block.selfie.about {
+  color: #f29492;
 }
 
 .end {
@@ -738,7 +745,6 @@
   line-height: 30px;
   font-weight: 200;
   text-align: left;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 .image-20 {
@@ -909,7 +915,7 @@
 .image-24 {
   padding-right: 15px;
   padding-left: 15px;
-  border-radius: 15px;
+  border-radius: 0px;
 }
 
 .columns-5 {
@@ -1034,6 +1040,11 @@
 .image-33 {
   margin-top: 40px;
   margin-bottom: 40px;
+  border-style: solid;
+  border-width: 0px;
+  border-color: rgba(173, 149, 160, 0.32);
+  border-radius: 15px;
+  box-shadow: 0 0 13px 7px #b8b8b8;
 }
 
 .quote {
@@ -1041,7 +1052,6 @@
   margin: 10px auto 60px;
   font-family: 'Avenir 200', sans-serif;
   color: #555;
-  text-shadow: 1px 1px 4px rgba(63, 63, 63, 0.26);
 }
 
 .image-34 {
@@ -1350,6 +1360,7 @@
 
 .landingspace {
   height: auto;
+  margin-bottom: 20px;
 }
 
 .aboutsec {
@@ -1380,20 +1391,20 @@
 }
 
 .image-44 {
-  max-height: 4vh;
+  max-height: 3vh;
   max-width: none;
   margin-left: 15px;
 }
 
 .image-45 {
-  max-height: 10vh;
+  max-height: 8vh;
   max-width: none;
   margin-right: 15px;
   margin-left: 15px;
 }
 
 .image-46 {
-  max-height: 10vh;
+  max-height: 8vh;
   max-width: none;
   margin-right: 10px;
   margin-left: 15px;
@@ -1504,7 +1515,7 @@
 }
 
 .image-51 {
-  max-height: 8vh;
+  max-height: 5vh;
   margin-left: 15px;
   -webkit-filter: invert(100%);
   filter: invert(100%);
@@ -1574,6 +1585,12 @@
 }
 
 .columns-12 {
+  margin-left: auto;
+}
+
+.image-54 {
+  width: 100%;
+  margin-right: auto;
   margin-left: auto;
 }
 
