--- a/css/portfolio-7760df.webflow.css
+++ b/css/portfolio-7760df.webflow.css
@@ -1,3 +1,10 @@
+body {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  color: #333;
+  font-size: 14px;
+  line-height: 20px;
+}
+
 .body {
   padding-right: 5vw;
   padding-left: 5vw;
@@ -158,15 +165,12 @@
   position: -webkit-sticky;
   position: sticky;
   top: 20px;
-  z-index: 100;
+  z-index: 999;
   display: inline-block;
-  overflow: visible;
   max-height: 8vh;
   max-width: none;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  padding-left: 0%;
+  margin-top: -135vh;
+  margin-left: 5vw;
 }
 
 .div-block-4 {
@@ -204,7 +208,7 @@
   overflow: scroll;
   width: auto;
   height: auto;
-  margin: 40px 10px auto auto;
+  margin: 40px 40px auto auto;
   padding-left: 15px;
   float: left;
   clear: none;
@@ -348,6 +352,10 @@
 .button.quar {
   margin-left: auto;
   background-image: linear-gradient(142deg, #a081ff, #943f6a);
+  -webkit-perspective: 0px;
+  perspective: 0px;
+  -webkit-transform: perspective(0px);
+  transform: perspective(0px);
 }
 
 .button.tippy {
@@ -698,10 +706,11 @@
 .text-block-2 {
   margin-top: 20px;
   margin-bottom: 0px;
-  font-family: 'Avenir 200', sans-serif;
+  font-family: Lato, sans-serif;
   color: hsla(0, 0%, 100%, 0.75);
   font-size: 16px;
   line-height: 24px;
+  font-weight: 300;
   text-transform: capitalize;
 }
 
@@ -720,7 +729,7 @@
 }
 
 .heading-8 {
-  font-family: 'Avenir 200', sans-serif;
+  font-family: Lato, sans-serif;
   color: #708b62;
   line-height: 48px;
   letter-spacing: 10px;
@@ -822,10 +831,11 @@
 }
 
 .text-block-3 {
-  font-family: 'Avenir 200', sans-serif;
+  font-family: Lato, sans-serif;
   color: #fff;
   font-size: 30px;
   line-height: 30px;
+  font-weight: 900;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
@@ -867,7 +877,7 @@
   display: block;
   width: auto;
   max-width: 100%;
-  margin: 10px auto 60px;
+  margin: -29px auto 0px;
   box-shadow: 1px 1px 3px 0 #000;
 }
 
@@ -880,9 +890,7 @@
 
 .foodhead {
   width: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-  margin-left: auto;
+  margin: 40px auto 20px;
   font-family: 'Avenir 200', sans-serif;
   color: #325622;
   font-size: 22px;
@@ -897,6 +905,7 @@
 .foodhead.left {
   display: block;
   width: auto;
+  margin-top: 0px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1332,7 +1341,9 @@
 
 .container-9 {
   position: static;
-  height: 100vh;
+  height: auto;
+  max-width: 80vw;
+  min-height: 100vh;
 }
 
 .column-3 {
@@ -1359,7 +1370,12 @@
 }
 
 .landingspace {
-  height: auto;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20px;
+  z-index: 999;
+  height: 8vh;
+  max-height: 8vh;
   margin-bottom: 20px;
 }
 
@@ -1382,12 +1398,39 @@
 }
 
 .column-4 {
+  position: static;
+  left: auto;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
   display: block;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 20px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
 }
 
 .column-5 {
   position: static;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 .image-44 {
@@ -1523,6 +1566,10 @@
 
 .column-8 {
   padding-left: 20px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 .text-block-6 {
@@ -1585,6 +1632,10 @@
 }
 
 .columns-12 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   margin-left: auto;
 }
 
@@ -1592,6 +1643,79 @@
   width: 100%;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container-12 {
+  position: relative;
+  max-width: 80vw;
+}
+
+.columns-13 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.columns-14 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.column-9 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.columns-15 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.column-10 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.column-11 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.column-12 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.column-13 {
+  padding-right: 40px;
+}
+
+.html-embed-3 {
+  display: block;
+  width: 85%;
+  max-width: none;
+  margin: 40px auto 140px;
+}
+
+.image-55 {
+  background-color: rgba(31, 56, 29, 0.99);
 }
 
 @media screen and (max-width: 991px) {
@@ -1614,7 +1738,7 @@
   }
 
   .image-3 {
-    margin-top: -145vh;
+    margin-top: -1155vh;
     margin-left: auto;
   }
 
@@ -1705,7 +1829,7 @@
   }
 
   .image-49 {
-    display: none;
+    display: block;
   }
 }
 
@@ -1794,7 +1918,9 @@
 
   .image-3 {
     max-width: 80%;
-    margin-top: -80vh;
+    margin-top: -986vh;
+    margin-right: auto;
+    margin-left: auto;
   }
 
   .paragraph-2 {
@@ -1918,6 +2044,10 @@
     line-height: 16px;
   }
 
+  .section-4.quar {
+    height: auto;
+  }
+
   .text-block.heading-5 {
     margin-left: auto;
   }
@@ -1936,13 +2066,118 @@
     top: 468px;
   }
 
+  .text-block-2.quar {
+    font-size: 14px;
+  }
+
+  .section-7 {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .space.quar {
+    display: none;
+  }
+
+  .image-27 {
+    width: auto;
+    margin-left: auto;
+  }
+
+  .image-28 {
+    top: 88%;
+  }
+
+  .quarsec {
+    max-width: 100%;
+  }
+
+  .text-block-4 {
+    width: auto;
+    font-size: 18px;
+  }
+
+  .text-block-4.quarmiddle {
+    font-size: 18px;
+  }
+
+  .quardiv {
+    width: auto;
+  }
+
+  .bolddiv {
+    height: 35vh;
+  }
+
   .image-30 {
-    width: 100vw;
+    top: 10vh;
+    width: 90vw;
     height: auto;
   }
 
+  .image-31 {
+    width: 90vw;
+    height: auto;
+  }
+
+  .quote {
+    font-size: 20px;
+  }
+
+  .image-36 {
+    width: 100%;
+  }
+
+  .skpara {
+    width: 100%;
+  }
+
+  .skpara.col {
+    width: 100%;
+    margin-left: auto;
+  }
+
+  .skpara.col.plus {
+    margin-left: auto;
+  }
+
+  .skpara.left {
+    width: 100%;
+  }
+
+  .columns-6 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .numbs {
+    display: none;
+  }
+
+  .image-38 {
+    width: auto;
+  }
+
+  .image-39 {
+    left: auto;
+    width: 100%;
+    max-width: none;
+  }
+
+  .image-40 {
+    left: auto;
+    margin-top: 20px;
+  }
+
   .column-4 {
+    position: relative;
     margin-top: 10vh;
+    padding-left: 0px;
+    clear: left;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 
   .image-44 {
@@ -1984,6 +2219,23 @@
 
   .image-51 {
     max-height: 4vh;
+  }
+
+  .columns-13 {
+    position: relative;
+    clear: right;
+  }
+
+  .column-14 {
+    display: none;
+  }
+
+  .column-15 {
+    display: none;
+  }
+
+  .bold-text-5 {
+    font-size: 18px;
   }
 }
 
