--- a/css/erin-fuller-portfolio.webflow.css
+++ b/css/erin-fuller-portfolio.webflow.css
@@ -16,7 +16,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden;
+  overflow: visible;
   height: auto;
   max-width: 1600px;
   margin-top: -108px;
@@ -42,6 +42,7 @@
 }
 
 .navbar-control {
+  position: relative;
   z-index: 998;
   display: -webkit-box;
   display: -webkit-flex;
@@ -115,11 +116,18 @@
 }
 
 .nav-link.first {
+  position: relative;
+  z-index: 900;
   color: #212733;
 }
 
 .nav-link.first:hover {
   color: #4f4d9c;
+}
+
+.nav-link.third {
+  position: relative;
+  z-index: 900;
 }
 
 .nav-link.third:hover {
@@ -149,6 +157,8 @@
 }
 
 .linkedin-logo {
+  position: relative;
+  z-index: 900;
   color: #212733;
 }
 
@@ -599,6 +609,7 @@
   color: #212733;
   font-size: 36px;
   line-height: 54px;
+  text-align: left;
 }
 
 .header-2.phase-2 {
@@ -748,9 +759,42 @@
   width: 100%;
 }
 
+.project-card.home {
+  height: 100%;
+  max-height: 290px;
+}
+
+.project-card.home.tcp {
+  height: auto;
+  max-height: none;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
 .project-card-description {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
   padding: 15px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .project-card-title {
@@ -789,6 +833,17 @@
 
 .project-image.tcp {
   width: 100%;
+}
+
+.description-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .lightbox-link {
@@ -1461,10 +1516,13 @@
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -webkit-align-content: start;
+  -ms-flex-line-pack: start;
+  align-content: start;
   grid-auto-columns: 1fr;
   grid-column-gap: 16px;
   grid-row-gap: 16px;
@@ -1524,23 +1582,6 @@
   font-size: 36px;
   line-height: 54px;
   font-weight: 600;
-}
-
-.body-2 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: #f7f8fc;
 }
 
 .background-wrapper {
@@ -1930,13 +1971,6 @@
   grid-column-gap: 24px;
 }
 
-.div-block-14 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .icon-step-block {
   height: auto;
 }
@@ -2004,14 +2038,6 @@
   object-fit: scale-down;
 }
 
-.image-17 {
-  display: block;
-  width: 100%;
-  max-width: 1248px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .div-block-15 {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2022,6 +2048,101 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.image-18 {
+  width: 100%;
+  max-width: 1196px;
+}
+
+.logo-link-mobile {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  font-family: Raleway, sans-serif;
+  color: #212733;
+  font-size: 64px;
+  line-height: 108px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.logo-link-mobile.w--current {
+  margin-right: auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  font-family: Raleway, sans-serif;
+  color: #212733;
+  font-size: 64px;
+  line-height: 108px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.social-link-wrapper-mobile {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 12px;
+  padding-left: 12px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.mobile-navbar-top {
+  display: none;
+}
+
+.fullscreen-nav {
+  display: none;
+  margin-left: 24px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.hamburger-line {
+  width: 30px;
+  height: 2px;
+  margin-bottom: 8px;
+  background-color: #fff;
+}
+
+.hamburger-line.first {
+  width: 32px;
+}
+
+.hamburger-line.last {
+  width: 24px;
+  margin-bottom: 0px;
+}
+
+.mobile-menu {
+  display: none;
 }
 
 @media screen and (max-width: 991px) {
@@ -2054,6 +2175,7 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    height: auto;
     padding-right: 0px;
     padding-left: 0px;
     -webkit-box-orient: vertical;
@@ -2069,10 +2191,10 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
 
   .project-hero-left {
@@ -2151,6 +2273,12 @@
     margin-bottom: 20px;
   }
 
+  .description-wrapper {
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+  }
+
   .grid-3 {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
@@ -2176,6 +2304,14 @@
 
   .empty {
     display: none;
+  }
+
+  .stretch-block.selfie-kiosk-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 
   .image-11 {
@@ -2284,12 +2420,62 @@
     margin-bottom: 60px;
   }
 
+  .image-15 {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+
   .conversation-tabs-menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+  }
+
+  .logo-link-mobile {
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .fullscreen-nav {
+    display: block;
+    -webkit-transition: opacity 400ms ease;
+    transition: opacity 400ms ease;
+  }
+
+  .fullscreen-nav:hover {
+    opacity: 0.75;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    padding-right: 12px;
+    padding-left: 12px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background-color: #000;
+    -webkit-transform: translate(-100vw, 0px);
+    -ms-transform: translate(-100vw, 0px);
+    transform: translate(-100vw, 0px);
   }
 }
 
@@ -2499,6 +2685,23 @@
   .selfie-kiosk-card {
     max-width: 50%;
   }
+
+  .logo-link-mobile.w--current {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+
+  .social-link-wrapper-mobile {
+    position: relative;
+    top: 5px;
+    display: inline-block;
+    height: 22px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -2506,6 +2709,12 @@
     width: 100vw;
     margin-right: 0px;
     margin-left: 0px;
+  }
+
+  .navbar-control {
+    display: none;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   .logo-link {
@@ -2544,6 +2753,16 @@
     font-size: 16px;
   }
 
+  .project-hero {
+    height: auto;
+    max-width: none;
+    padding-top: 40px;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+  }
+
   .project-hero-left {
     padding-right: 10px;
     padding-left: 10px;
@@ -2555,13 +2774,16 @@
     padding-left: 10px;
   }
 
+  .full-view-description.tcp {
+    padding: 20px;
+  }
+
   .project-description {
     font-size: 16px;
   }
 
   .project-phase-section {
-    padding-right: 20px;
-    padding-left: 20px;
+    padding: 120px 20px;
   }
 
   .heading-1 {
@@ -2569,12 +2791,20 @@
     line-height: 50px;
   }
 
+  .heading-1.last {
+    margin-top: 240px;
+  }
+
   .text-block._24-margin.card-text {
-    text-align: center;
+    text-align: left;
   }
 
   .text-block._24-margin.card-text.truncate {
     text-align: center;
+  }
+
+  .text-block._24-margin.card-text.selfie-kios-hero-subtext {
+    text-align: left;
   }
 
   .text-block.quarpanion-slider-text {
@@ -2609,10 +2839,11 @@
   }
 
   .image-3 {
-    display: none;
+    display: block;
   }
 
   .heading-3.phase-superheader {
+    margin-top: 228px;
     font-size: 20px;
     line-height: 30px;
   }
@@ -2653,7 +2884,7 @@
   }
 
   .image-4 {
-    display: none;
+    display: block;
   }
 
   .tcp-infographic-3 {
@@ -2691,6 +2922,18 @@
   .project-card {
     width: 65%;
     min-width: 245px;
+  }
+
+  .project-card.home {
+    width: 100%;
+    height: auto;
+    max-height: none;
+    border-radius: 12px;
+  }
+
+  .project-image {
+    width: 100%;
+    max-width: none;
   }
 
   .description-wrapper {
@@ -2777,6 +3020,10 @@
   .home-hero-left {
     padding-right: 10px;
     padding-left: 10px;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
   }
 
   .projects-submenu.w--open {
@@ -2825,8 +3072,149 @@
     max-width: 90%;
   }
 
+  .icons-wrapper {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
   .conversation-pane.evening {
     margin-top: 35px;
+  }
+
+  .logo-link-mobile {
+    font-size: 24px;
+    line-height: 36px;
+    text-align: left;
+  }
+
+  .logo-link-mobile.w--current {
+    display: inline-block;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: left;
+  }
+
+  .mobile-nav-link {
+    padding: 8px 24px;
+    font-family: 'Maven Pro', sans-serif;
+    color: #212733;
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 500;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+  }
+
+  .mobile-nav-link.project {
+    padding-left: 48px;
+  }
+
+  .social-link-wrapper-mobile {
+    position: absolute;
+    left: auto;
+    top: auto;
+    right: 24px;
+    bottom: 18px;
+  }
+
+  .mobile-links-wrapper {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: 8px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    border-bottom: 1px solid rgba(33, 39, 51, 0.1);
+    background-color: #f7f8fc;
+  }
+
+  .mobile-navbar-top {
+    position: relative;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: auto;
+    z-index: 999;
+    display: block;
+    height: 68px;
+    padding-right: 24px;
+    padding-left: 24px;
+    font-family: Raleway, sans-serif;
+    color: #212733;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 600;
+  }
+
+  .mobile-navbar-container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .fullscreen-nav {
+    display: inline-block;
+    margin-left: 10px;
+  }
+
+  .hamburger-line.first {
+    width: 30px;
+    background-color: #212733;
+  }
+
+  .hamburger-line.middle {
+    background-color: #212733;
+  }
+
+  .hamburger-line.last {
+    width: 30px;
+    background-color: #212733;
+  }
+
+  .mobile-menu {
+    overflow: hidden;
+    padding-top: 67px;
+    padding-right: 0px;
+    padding-left: 0px;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    background-color: #f7f8fc;
+    -webkit-transform: translate(-100vw, 0px);
+    -ms-transform: translate(-100vw, 0px);
+    transform: translate(-100vw, 0px);
+  }
+
+  .div-block-16 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
@@ -3116,6 +3504,13 @@
   grid-row-start: span 2;
   -ms-grid-row-span: 2;
   grid-row-end: span 2;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+}
+
+#w-node-_4bd7657e-86d2-a406-aeb6-0b43b9898551-e13e805c {
+  -webkit-align-self: start;
+  -ms-flex-item-align: start;
   -ms-grid-row-align: start;
   align-self: start;
 }
